# water-sensor-alert

./: .gitignore  Cargo.toml  Justfile  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.ino
