[package]
name = "water-sensor-alert"
version = "0.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = [
    "c1m50c <58411864+c1m50c@users.noreply.github.com>"
]

[dependencies]
arduino-hal = { git = "https://github.com/Rahix/avr-hal", rev = "f6b79d", features = ["arduino-uno"] }
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[[bin]]
name = "water-sensor-alert"
path = "src/bin/main.rs"
bench = false
test = false
